Write showCart() and some table CSS

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,12 @@
 /* TODO: Make it awesome */
+
+table {
+  table-layout: fixed;
+  margin: auto;
+  border-collapse: collapse;
+}
+td, th {
+  /* border: 2px slategray solid; */
+  padding: .5em;
+  text-align: left;
+}
