--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,16 @@
 /* TODO: Make it awesome */
-
-
-table {
-  table-layout: fixed;
-  margin: auto;
-  border-collapse: collapse;
+* {
+  box-sizing: border-box;
 }
-td, th {
-  /* border: 2px slategray solid; */
-  padding: .5em;
-  text-align: left;
+body {
+  background-color: #2c698d;
+  color: #272643;
+  font-size: 1.5rem;
 }
-
 body > header:first-of-type {
-  height: 90px;
+  height: auto;
   background-color:#bae8e8;
 }
-
 
 nav > ul > li {
   height: 40px;
@@ -24,6 +18,54 @@ nav > ul > li {
   padding: 1em;
   border-collapse: collapse;
   box-sizing: border-box;
+}
+
+h1 {
+  text-align: center;
+  font-size: 5rem;
+}
+main h1 {
+  font-size: 2rem;
+  font-weight: bold;
+}
+main {
+  display: grid;
+  grid-template: auto auto/1fr 2fr;
+  max-width: 1440px;
+  margin: auto;
+  line-height: 2rem;
+}
+.col-1 {
+  grid-column: 1/2;
+}
+.col-2 {
+  grid-column: 2/3;
+}
+.card {
+  margin: 1rem 0.5rem;
+  border: .25rem solid #272643;
+  border-radius: 1rem;
+  padding: 1rem;
+  background-color: #e3f6f5;
+}
+ol {
+  list-style: decimal;
+  margin: 0 0 0 1.5rem;
+}
+
+table {
+  table-layout: fixed;
+  margin: auto;
+  border-collapse: collapse;
+}
+td, th {
+  padding: .5em;
+  text-align: left;
+  border-bottom: 1px solid #2c698d;
+  text-align: left;
+}
+table img {
+  max-width: 2rem;
 }
 
 /* colors
